test/functions/iterators/errors/badArgs.good
badArgs.chpl:11: error: number of actuals does not match number of formals in myiter()
